# openprotect

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bins/opc-gui/: Cargo.toml
bins/opc-gui/src/: main.rs  opc.rs  tray.rs  views.rs
bins/pgn/: Cargo.toml
bins/pgn-tray/: Cargo.toml
bins/pgn-tray/src/: icons.rs  main.rs  pgn.rs
bins/pgn/src/: main.rs
crates/gp-auth/: Cargo.toml
crates/gp-auth/src/: client.rs  error.rs  hip.rs  lib.rs  okta.rs  saml_common.rs  saml_paste.rs
crates/gp-config/src/: lib.rs
crates/gp-dns/src/: lib.rs
crates/gp-hip/: Cargo.toml
crates/gp-hip/src/: lib.rs
crates/gp-ipc/src/: lib.rs
crates/gp-ipc/tests/: roundtrip.rs
crates/gp-openconnect-sys/: build.rs  wrapper.h
crates/gp-openconnect-sys/src/: lib.rs
crates/gp-proto/src/: gateway_config.rs  hip_check.rs  lib.rs  params.rs  xml.rs
crates/gp-route/src/: lib.rs
crates/gp-tunnel/src/: lib.rs  openconnect.rs
packaging/systemd/: README.md  pangolin@.service
