[package]
name = "pgn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pangolin — GlobalProtect VPN CLI client"

[[bin]]
name = "pgn"
path = "src/main.rs"

[features]
# The default build includes the embedded GTK+WebKit SAML window, which
# pulls in the full webkit2gtk / GTK runtime dep chain (~30 MB of
# shared libraries on Debian/Ubuntu). Perfect for laptops and desktop
# Linux. Server / container / headless builds should pass
# `--no-default-features` to drop it; the `paste` and `okta` SAML
# modes continue to work without any GUI libs. See README for the
# exact commands.
default = ["webview"]
webview = ["gp-auth/saml-webview"]

[dependencies]
gp-proto = { workspace = true }
gp-auth = { workspace = true }
gp-tunnel = { workspace = true }
gp-config = { workspace = true }
gp-hip = { workspace = true }
gp-dns = { workspace = true }
gp-route = { workspace = true }
gp-ipc = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
